--- a/create_point.html
+++ b/create_point.html
@@ -19,7 +19,7 @@
 
     </head>
 
-    <!-- Parei Aula 2 - 49min -->
+    <!-- Parei Aula 2 - 1h 17min -->
     <body>
 
         <div id="page-create-point">
@@ -82,6 +82,9 @@
                                 <option value="">Selecione o Estado</option>
                             </select>
 
+                            <!-- input type hidden = escondido -->
+                            <input type="hidden" name="state">
+
                         </div>
 
                         <div class="field">
@@ -115,6 +118,8 @@
 
         </div>
 
+        <script src="/scripts/create-point.js"></script>
+        
     </body>
 
 </html>
