--- a/create_point.html
+++ b/create_point.html
@@ -19,7 +19,7 @@
 
     </head>
 
-    <!-- Parei Aula 2 - 1h 17min -->
+    <!-- Parei Aula 3 -->
     <body>
 
         <div id="page-create-point">
@@ -51,7 +51,7 @@
                     <div class="field">
 
                         <label for="name">Nome da entidade</label>
-                        <input type="text" name="name"> 
+                        <input type="text" name="name" required> 
                         <!--Campo de entrada de dados-->
                     </div>
 
@@ -60,14 +60,14 @@
                         <div class="field">
 
                             <label for="address">Endereço</label>
-                            <input type="text" name="address">
+                            <input type="text" name="address" required>
 
                         </div>
 
                         <div class="field">
 
                             <label for="address2">Número/Complemento</label>
-                            <input type="number" name="address2">
+                            <input type="number" name="address2" required>
 
                         </div>
 
@@ -78,7 +78,7 @@
                         <div class="field">
                             <label for="state">Estado</label>
 
-                            <select name="uf">                     <!-- caixinha selecionar-->
+                            <select name="uf" required>                     <!-- caixinha selecionar-->
                                 <option value="">Selecione o Estado</option>
                             </select>
 
@@ -91,7 +91,7 @@
 
                             <label for="city">Cidade</label>
 
-                            <select name="city" disabled>                     <!-- caixinha selecionar-->
+                            <select name="city" disabled required>                     <!-- caixinha selecionar-->
                                 <option value="">Selecione a Cidade</option>
                             </select>
 
@@ -109,6 +109,42 @@
                         <h2>Ítens de coleta</h2>
                     </legend>
 
+                    <div class="items-grid">
+
+                        <li data-id="1">
+                            <img src="./icones/lampadas.svg" alt="Lâmpadas">
+                            <span>Lâmpadas</span>
+                        </li>
+
+                        <li data-id="2">
+                            <img src="./icones/baterias.svg" alt="Pilhas e Baterias">
+                            <span>Pilhas e Baterias</span>
+                        </li>
+
+                        <li data-id="3">
+                            <img src="./icones/papeis-papelao.svg" alt="Papéis e Papelão">
+                            <span>Papéis e Papelão</span>
+                        </li>
+
+                        <li data-id="4">
+                            <img src="./icones/eletronicos.svg" alt="Resíduos Eletrônicos">
+                            <span>Resíduos Eletrônicos</span>
+                        </li>
+
+                        <li data-id="5">
+                            <img src="./icones/organicos.svg" alt="Resíduos Orgânicos">
+                            <span>Resíduos Orgânicos</span>
+                        </li>
+
+                        <li data-id="6">
+                            <img src="./icones/oleo.svg" alt="Óleo de Cozinha">
+                            <span>Óleo de Cozinha</span>
+                        </li>
+
+                    </div>
+
+                    <input type="hidden" name="items">
+                    
                 </fieldset>
                 <!-- Fim ítens de coleta  -->
 
