--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         <link rel="stylesheet" href="./styles/main.css">
         <link rel="stylesheet" href="./styles/home.css">
+        <link rel="stylesheet" href="./styles/modal.css">
 
         <link rel="stylesheet" href="./styles/responsive.css">
 
@@ -40,7 +41,7 @@
             <div class="content">
 
                 <header>
-                    <img src="./icones/logo.svg" alt="Logomarca">
+                    <img src="./icons/logo.svg" alt="Logomarca">
                     
                     <a href="http://google.com.br">
                         <span></span>
@@ -62,6 +63,36 @@
 
         </div>
         <!--Inicio container-->
+
+        <!-- Inicio Modal -->
+        <div id="modal">
+
+            <div class="content">
+
+                <div class="header">
+
+                    <h1>Pontos de coleta</h1>
+                    <a href="">Fechar</a>
+
+                </div>
+
+                <form action="">
+
+                    <label for="search">Cidade</label>
+
+                    <div class="search field">
+                        <input type="text" name="search" placeholder="Pesquise por Cidade">
+                        <button>
+                            <img src="./icons/search.svg" alt="Buscar" >
+                        </button>
+                    </div>
+                    
+                </form>
+
+            </div>
+
+        </div>
+        <!-- Fim Modal -->
 
     </body>
 
