--- a/create_point.html
+++ b/create_point.html
@@ -19,14 +19,14 @@
 
     </head>
 
-    <!-- Parei Aula 3 -->
+    <!-- Parei Aula 3  57 min -->
     <body>
 
         <div id="page-create-point">
 
             <header>
                 
-                <img src="./icones/logo.svg" alt="Logomarca">
+                <img src="./icons/logo.svg" alt="Logomarca">
                     
                 <a href="http://google.com.br">
                     <span></span>
@@ -112,32 +112,32 @@
                     <div class="items-grid">
 
                         <li data-id="1">
-                            <img src="./icones/lampadas.svg" alt="Lâmpadas">
+                            <img src="./icons/lampadas.svg" alt="Lâmpadas">
                             <span>Lâmpadas</span>
                         </li>
 
                         <li data-id="2">
-                            <img src="./icones/baterias.svg" alt="Pilhas e Baterias">
+                            <img src="./icons/baterias.svg" alt="Pilhas e Baterias">
                             <span>Pilhas e Baterias</span>
                         </li>
 
                         <li data-id="3">
-                            <img src="./icones/papeis-papelao.svg" alt="Papéis e Papelão">
+                            <img src="./icons/papeis-papelao.svg" alt="Papéis e Papelão">
                             <span>Papéis e Papelão</span>
                         </li>
 
                         <li data-id="4">
-                            <img src="./icones/eletronicos.svg" alt="Resíduos Eletrônicos">
+                            <img src="./icons/eletronicos.svg" alt="Resíduos Eletrônicos">
                             <span>Resíduos Eletrônicos</span>
                         </li>
 
                         <li data-id="5">
-                            <img src="./icones/organicos.svg" alt="Resíduos Orgânicos">
+                            <img src="./icons/organicos.svg" alt="Resíduos Orgânicos">
                             <span>Resíduos Orgânicos</span>
                         </li>
 
                         <li data-id="6">
-                            <img src="./icones/oleo.svg" alt="Óleo de Cozinha">
+                            <img src="./icons/oleo.svg" alt="Óleo de Cozinha">
                             <span>Óleo de Cozinha</span>
                         </li>
 
