--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <header>
                     <img src="./icons/logo.svg" alt="Logomarca">
                     
-                    <a href="http://google.com.br">
+                    <a href="./create_point.html">
                         <span></span>
                         Cadastre um ponto de coleta
                     </a>
@@ -65,18 +65,18 @@
         <!--Inicio container-->
 
         <!-- Inicio Modal -->
-        <div id="modal">
+        <div id="modal" class="hide">
 
             <div class="content">
 
                 <div class="header">
 
                     <h1>Pontos de coleta</h1>
-                    <a href="">Fechar</a>
+                    <a href="#">Fechar</a>
 
                 </div>
 
-                <form action="">
+                <form action="./search-results.html">
 
                     <label for="search">Cidade</label>
 
@@ -93,6 +93,8 @@
 
         </div>
         <!-- Fim Modal -->
+
+        <script src="./scripts/index.js"></script>
 
     </body>
 
